# AI_Tool_Nest

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/core/: config.py  templates.py
app/static/css/: svg-styles.css  tailwind.css
app/templates/: base.html  home.html  image-to-text.html  text-paraphraser.html  text-summarizer.html
app/views/: __init__.py  home.py  image_to_text.py  text_paraphraser.py  text_summarizer.py
docs/: architecture.md  technical.md
